# culicidaelab

./: .Dockerfile  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  action.yml  index.html  mkdocs.common.yml  mkdocs.en.yml  mkdocs.ru.yml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  refactor-tests.sh  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yaml  docs_deploy.yaml
api_docs/core/: index.html
api_docs/datasets/: index.html
api_docs/predictors/: index.html
api_docs/providers/: index.html
binder_cfg/: requirements.txt
culicidaelab/: __init__.py  classification.py  detection.py  segmentation.py  serve.py  settings.py  utils.py
culicidaelab/conf/datasets/: classification.yaml  detection.yaml  segmentation.yaml  species_diversity.yaml
culicidaelab/conf/predictors/: classifier.yaml  detector.yaml  segmenter.yaml
culicidaelab/conf/providers/: huggingface.yaml  kaggle.yaml  roboflow.yaml
culicidaelab/conf/species/: species_classes.yaml  species_metadata.yaml
culicidaelab/core/: __init__.py  base_inference_backend.py  base_predictor.py  base_provider.py  config_manager.py  config_models.py  loader_protocol.py  model_weights_manager.py  prediction_models.py  provider_service.py  resource_manager.py  settings.py  species_config.py  test_provider_service.py  utils.py  weights_manager_protocol.py
culicidaelab/datasets/: __init__.py  datasets_manager.py  huggingface.py
culicidaelab/predictors/: __init__.py  backend_factory.py  classifier.py  detector.py  model_weights_manager.py  segmenter.py
culicidaelab/predictors/backends/: __init__.py  _fastai.py  _onnx.py  _sam.py  _yolo.py
culicidaelab/providers/: __init__.py  huggingface_provider.py  kaggle_provider.py  remote_url_provider.py  roboflow_provider.py
dev_docs/architecture/: index.html
dev_docs/code_of_conduct/: index.html
dev_docs/contributing/: index.html
docs/: base_predictor.md  config_manager.md  gallery_conf.py  index.md  loader_protocol.md  resource_manager.md  settings.md  settings_tutorial.md  species_config.md  uml.pyns  uml.xml  utils.md
docs/datasets/: huggingface_loader.md  manager.md
docs/en/: gallery_conf.py  index.md  installation.md  quickstart.md
docs/en/api_docs/: datasets.md  providers.md  serve.md
docs/en/binder_cfg/: requirements.txt
docs/en/dev_docs/: architecture.md  contributing.md
docs/en/examples/: README.md  tutorial_part_0_settings_example.py  tutorial_part_1_datasets_example.py  tutorial_part_2_mosquito_detection.py  tutorial_part_3_mosquito_segmentation.py  tutorial_part_4_datasets_example.py  tutorial_part_4_mosquito_classification.py  tutorial_part_5_serve_module.py
docs/en/user_manual/: user_manual.md
docs/predictors/: classifier.md  detector.md  model_weights_manager.md  segmenter.md
docs/providers/: huggingface.md  kaggle.md  overview.md  remote_url.md  roboflow.md
docs/ru/: index.md  installation.md  quickstart.md
docs/ru/api_docs/: core.md  datasets.md  predictors.md
docs/ru/dev_docs/: architecture.md  code_of_conduct.md  contributing.md
docs/ru/examples/: README.md  tutorial_part_0_settings_example.py  tutorial_part_1_datasets_example.py  tutorial_part_2_mosquito_detection.py  tutorial_part_3_mosquito_classification.py  tutorial_part_3_mosquito_segmentation.py  tutorial_part_4_mosquito_classification.py  tutorial_part_5_serve_module.py
docs/ru/user_manual/: user_manual.md
en/: 404.html  index.html  objects.inv  sitemap.xml
en/api_docs/core/: index.html
en/api_docs/predictors/: index.html
en/api_docs/providers/: index.html
en/api_docs/serve/: index.html
en/dev_docs/architecture/: index.html
en/dev_docs/code_of_conduct/: index.html
en/installation/: index.html
en/quickstart/: index.html
en/search/: search_index.json
en/user_manual/user_manual/: index.html
examples/: datasets_example.ipynb  settings_example.ipynb  tutorial_part_1_mosquito_detection.ipynb  tutorial_part_2_mosquito_segmentation.ipynb  tutorial_part_2_mosquito_segmentation.py  tutorial_part_3_mosquito_classification.ipynb
examples/custom_configs/: config.yaml
examples/en/: tutorial_part_0_settings_example.ipynb  tutorial_part_0_settings_example.py  tutorial_part_1_datasets_example.ipynb  tutorial_part_2_mosquito_detection.ipynb  tutorial_part_2_mosquito_detection.py  tutorial_part_3_mosquito_segmentation.ipynb  tutorial_part_4_mosquito_classification.ipynb  tutorial_part_4_mosquito_classification.py  tutorial_part_5_serve_module.ipynb
examples/ru/: tutorial_part_0_settings_example.ipynb  tutorial_part_1_datasets_example.ipynb  tutorial_part_2_mosquito_detection.ipynb  tutorial_part_2_mosquito_detection.py  tutorial_part_3_mosquito_segmentation.ipynb  tutorial_part_4_mosquito_classification.ipynb  tutorial_part_5_serve_module.ipynb
installation/: index.html
logs/: classification.csv  classification.json  detection.csv  detection.json
quickstart/: index.html
ru/: 404.html  index.html  objects.inv  sitemap.xml
ru/installation/: index.html
ru/quickstart/: index.html
ru/search/: search_index.json
tests/: conftest.py  performance_tests.py  test_classification.py  test_detection.py  test_performance.py  test_segmentation.py  test_settings.py  test_utils.py
tests/conf/: config.yaml
tests/core/: test_base_predictor.py  test_base_provider.py  test_config_manager.py  test_config_models.py  test_provider_service.py  test_resource_manager.py  test_settings.py  test_species_config.py  test_utils.py
tests/datasets/: test_datasets.py  test_datasets_manager.py
tests/integration/: conftest.py  test_config_integration.py  test_end_to_end_workflow.py  test_filesystem_integration.py  test_provider_integration.py
tests/performance/: test_fastai.py  test_performance.py
tests/predictors/: test_classifier.py  test_detector.py  test_model_weights_manager.py  test_segmenter.py
tests/providers/: test_huggingface_provider.py
tests/unit/: conftest.py  test_serve.py
user_manual/user_manual/: index.html
(+71 files in other folders)
