[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.3"]
build-backend = "setuptools.build_meta"


[project]
name = "culicidaelab"
version = "0.1.2"
description = "A Python library for mosquito detection, segmentation, and classification in images"
readme = "README.md"
authors = [
    { name = "Ilona Kovaleva", email = "iloncka.ds@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    "fastai>=2.7.0",
    "timm>=0.9.0",
    "ultralytics>=8.0.0",
    "pyyaml>=6.0.0",
    "huggingface-hub>=0.16.0",
    "datasets>=2.13.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=0.21.0",
    "pycocotools>=2.0.7",
    "sam2 @ git+https://github.com/iloncka-ds/sam2.git@v1.2-light",
    "dill>=0.3.8",
    "graphviz>=0.20.3",
    "appdirs>=1.4.4",
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/iloncka/culicidaelab"
"Bug Tracker" = "https://github.com/iloncka/culicidaelab/issues"

[tool.setuptools]
packages = ["culicidaelab"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "ipykernel>=6.16.2",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "twine>=5.1.1",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "ipykernel>=6.16.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.46",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "twine>=5.1.1",
]
